# lunchmoney-assets

./: .dockerignore  .env-example  .eslintrc.cjs  .gitignore  .tool-versions  AGENTS.md  Cronfile  Dockerfile  GEMINI.md  Makefile  README.md  TODO  commands.md  cron.sh  cron.ts  docker-compose.yml  index.ts  instructions.md  main.py  notes.md  package-lock.json  package.json  playground.py  proxies.py  pyproject.toml  railpack.json  readme.md  scrape_assets.py  tsconfig.json
.claude/commands/: write-or-update-readme.md
.cursor/commands/: write-or-update-readme.md
.cursor/rules/: general.mdc  python.mdc
.devcontainer/: devcontainer.json
.gemini/commands/: write-or-update-readme.toml
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: python.instructions.md
.github/prompts/: write-or-update-readme.prompt.md
.github/workflows/: ci.yml  docker.yml  trunk.yml
.trunk/: trunk.yaml
tests/: test_utils.py
