[project]
name = "lunchmoney-assets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "firecrawl-py>=4.13.4",
    "lunchable>=1.4.3",
    "pydantic>=2.12.5",
    "python-decouple-typed>=3.11.0",
    "structlog-config>=0.8.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
